# WeatherForecast

./: .gitignore  .qmake.stash  CMakeLists.txt  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  city_info.json  config.json  file.qrc  main.cpp  ui_weather.h  ui_weatherforecast.h  weather.cpp  weather.h  weather.ui  weather_forecast.pro  weather_tool.cpp  weather_tool.h  weatherdate.cpp  weatherdate.h  weatherforecast.cpp  weatherforecast.h  weatherforecast.ui
debug/: moc_predefs.h  moc_weather.cpp  qrc_icons.cpp  qrc_weatypeico.cpp  weather_forecast.ilk
images/: images.qrc
include/: weather_tool.h  weatherdate.h
resource/: city_info.json  config.json  file.qrc
resource/icons/: icons.qrc
src/: main.cpp  weather_tool.cpp  weatherdate.cpp  weatherforecast.cpp
ui/: weatherforecast.ui
weatherIcons/: weatypeico.qrc
